.xmonad/xmonad.errors

xmonad.hs:69:5: error: parse error on input ‘]’
   |
69 |     ] ++ [
   |     ^
